--- a/LiveStone/LSIntercessionCell.xib
+++ b/LiveStone/LSIntercessionCell.xib
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="164.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="164"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56I-6z-sXj" customClass="LSCircleImageView">
@@ -56,7 +56,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FiF-Ra-16Y">
-                        <rect key="frame" x="290" y="141" width="21.5" height="15"/>
+                        <rect key="frame" x="290" y="141" width="22" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" priority="250" constant="25" id="Eht-lC-ywh"/>
                             <constraint firstAttribute="height" constant="15" id="Ia1-Fp-84m"/>
@@ -66,7 +66,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tQV-ST-Ne7">
-                        <rect key="frame" x="272.5" y="141" width="15" height="15"/>
+                        <rect key="frame" x="272" y="141" width="15" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="76t-ji-KLE"/>
                             <constraint firstAttribute="width" constant="15" id="XfZ-w0-MN8"/>
@@ -95,13 +95,13 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="avaterImgView" destination="56I-6z-sXj" id="PB8-90-agu"/>
+                <outlet property="avatarImgView" destination="56I-6z-sXj" id="PB8-90-agu"/>
                 <outlet property="contentLabel" destination="bfd-Lm-REA" id="M1H-Zc-ed8"/>
                 <outlet property="numberLabel" destination="FiF-Ra-16Y" id="6bu-g6-GlB"/>
                 <outlet property="relationshipLabel" destination="2Zs-EJ-n2E" id="a50-fN-8HV"/>
                 <outlet property="userNameLabel" destination="K7D-XZ-DNh" id="y0i-2g-vH0"/>
             </connections>
-            <point key="canvasLocation" x="453" y="310.5"/>
+            <point key="canvasLocation" x="551" y="275.5"/>
         </tableViewCell>
     </objects>
     <resources>
