--- a/LiveStone/Base.lproj/Main.storyboard
+++ b/LiveStone/Base.lproj/Main.storyboard
@@ -769,7 +769,26 @@
                     <view key="view" contentMode="scaleToFill" id="FKa-fh-bNR">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vu5-xP-uII">
+                                <rect key="frame" x="20" y="8" width="560" height="128"/>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Gai-7H-III"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="DQ5-F9-o4n" id="hnj-Rs-k3U"/>
+                                </connections>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vu5-xP-uII" firstAttribute="leading" secondItem="FKa-fh-bNR" secondAttribute="leadingMargin" id="Qgl-Ag-FCD"/>
+                            <constraint firstItem="vu5-xP-uII" firstAttribute="top" secondItem="eqO-Ce-LZM" secondAttribute="bottom" constant="8" id="Syo-g7-NiT"/>
+                            <constraint firstItem="vu5-xP-uII" firstAttribute="trailing" secondItem="FKa-fh-bNR" secondAttribute="trailingMargin" id="uGe-tZ-FIs"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gEu-5l-gfb">
                         <barButtonItem key="leftBarButtonItem" title="取消" id="Da9-ym-ULm">
@@ -785,6 +804,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="textView" destination="vu5-xP-uII" id="fPo-Ww-pnx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DtK-bZ-YKZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
