1. 使用自定义支持Placeholder的UITextView子类UIPlaceHolderTextView 2. 开启LSCircleImageView可视化预览功能

--- a/LiveStone/LSIntercessionCell.xib
+++ b/LiveStone/LSIntercessionCell.xib
@@ -17,11 +17,16 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56I-6z-sXj" customClass="LSCircleImageView">
                         <rect key="frame" x="16" y="16" width="50" height="50"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="3fv-07-Dq6"/>
                             <constraint firstAttribute="width" constant="50" id="zSG-4v-Ayn"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="sex">
+                                <integer key="value" value="0"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="百里抱信" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7D-XZ-DNh">
                         <rect key="frame" x="72" y="16" width="68" height="21"/>
