--- a/LiveStone/LSIntercessionCell.xib
+++ b/LiveStone/LSIntercessionCell.xib
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="164.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="164"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56I-6z-sXj" customClass="LSCircleImageView">
@@ -26,19 +26,23 @@
                             <userDefinedRuntimeAttribute type="number" keyPath="sex">
                                 <integer key="value" value="0"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="image" keyPath="image" value="Logo"/>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="百里抱信" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7D-XZ-DNh">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="百里抱信" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7D-XZ-DNh">
                         <rect key="frame" x="72" y="16" width="68" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" priority="250" constant="68" id="dqi-CZ-cPs"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <color key="textColor" red="0.27450980392156865" green="0.68235294117647061" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朋友的朋友" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Zs-EJ-n2E">
-                        <rect key="frame" x="72" y="41" width="74" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朋友的朋友" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Zs-EJ-n2E">
+                        <rect key="frame" x="72" y="41" width="70" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="HvG-Uy-g4P"/>
-                            <constraint firstAttribute="width" constant="74" id="Qzg-WF-eQX"/>
+                            <constraint firstAttribute="width" priority="250" constant="74" id="Qzg-WF-eQX"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -50,17 +54,17 @@
                         <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一个月前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7N-ux-APn">
-                        <rect key="frame" x="16" y="141" width="68" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一个月前" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7N-ux-APn">
+                        <rect key="frame" x="16" y="141" width="52" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="OX7-Gf-Oo7"/>
-                            <constraint firstAttribute="width" constant="68" id="huY-hV-3T6"/>
+                            <constraint firstAttribute="width" priority="250" constant="68" id="huY-hV-3T6"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FiF-Ra-16Y">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0人" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FiF-Ra-16Y">
                         <rect key="frame" x="290" y="141" width="22" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" priority="250" constant="25" id="Eht-lC-ywh"/>
@@ -78,6 +82,13 @@
                         </constraints>
                         <state key="normal" title="Button" image="IntercessionIcon"/>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S8E-fh-dmp">
+                        <rect key="frame" x="16" y="163" width="304" height="1"/>
+                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="aaZ-gh-03b"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2Zs-EJ-n2E" firstAttribute="top" secondItem="K7D-XZ-DNh" secondAttribute="bottom" constant="4" id="8Om-FC-4W5"/>
@@ -86,6 +97,8 @@
                     <constraint firstItem="bfd-Lm-REA" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="HZp-4Y-Zot"/>
                     <constraint firstItem="2Zs-EJ-n2E" firstAttribute="leading" secondItem="K7D-XZ-DNh" secondAttribute="leading" id="IaH-g6-pmD"/>
                     <constraint firstItem="tQV-ST-Ne7" firstAttribute="top" secondItem="bfd-Lm-REA" secondAttribute="bottom" constant="8" id="JPH-wl-khn"/>
+                    <constraint firstAttribute="bottom" secondItem="S8E-fh-dmp" secondAttribute="bottom" id="Ky1-Pf-LBA"/>
+                    <constraint firstItem="S8E-fh-dmp" firstAttribute="leading" secondItem="bfd-Lm-REA" secondAttribute="leading" id="Pin-v1-Kth"/>
                     <constraint firstItem="bfd-Lm-REA" firstAttribute="top" secondItem="56I-6z-sXj" secondAttribute="bottom" constant="8" id="Uxe-pX-Asf"/>
                     <constraint firstItem="bfd-Lm-REA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="da7-c4-0oD"/>
                     <constraint firstItem="56I-6z-sXj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="egJ-P2-o9v"/>
@@ -95,6 +108,7 @@
                     <constraint firstItem="FiF-Ra-16Y" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="qYP-99-jra"/>
                     <constraint firstItem="p7N-ux-APn" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="rwA-Oi-xj8"/>
                     <constraint firstItem="p7N-ux-APn" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="uBD-Ho-6MJ"/>
+                    <constraint firstAttribute="trailing" secondItem="S8E-fh-dmp" secondAttribute="trailing" id="uTL-Vs-4iy"/>
                     <constraint firstItem="K7D-XZ-DNh" firstAttribute="top" secondItem="56I-6z-sXj" secondAttribute="top" id="vZp-nh-Aoq"/>
                     <constraint firstItem="56I-6z-sXj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="xqf-fC-sJg"/>
                 </constraints>
@@ -104,6 +118,7 @@
                 <outlet property="contentLabel" destination="bfd-Lm-REA" id="M1H-Zc-ed8"/>
                 <outlet property="numberLabel" destination="FiF-Ra-16Y" id="6bu-g6-GlB"/>
                 <outlet property="relationshipLabel" destination="2Zs-EJ-n2E" id="a50-fN-8HV"/>
+                <outlet property="updateLabel" destination="p7N-ux-APn" id="h0u-s3-Xw3"/>
                 <outlet property="userNameLabel" destination="K7D-XZ-DNh" id="y0i-2g-vH0"/>
             </connections>
             <point key="canvasLocation" x="551" y="275.5"/>
@@ -111,5 +126,6 @@
     </objects>
     <resources>
         <image name="IntercessionIcon" width="21" height="21"/>
+        <image name="Logo" width="85" height="85"/>
     </resources>
 </document>
